--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h1><a id="portfolio"> Portfolio</a></h1>
 
       <div class="gallery">
-        <a target="_blank" href="img/GOPRO.jpg">
+        <a target="_blank" href="img/GOPRO.JPG">
           <img src="img/GOPRO.jpg" alt="USA1" width="600" height="400">
         </a>
         <div class="desc">This is on a bus in New York on my GoPro.</div>
@@ -56,7 +56,7 @@
       </div>
 
       <div class="gallery">
-        <a target="_blank" href="img/GOPRO2.jpg">
+        <a target="_blank" href="img/GOPRO2.JPG">
           <img src="img/GOPRO2.jpg" alt="USA2" width="600" height="400">
         </a>
         <div class="desc">Add a description of the image here</div>
