--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div class="gallery">
         <a target="_blank" href="img/GOPRO.JPG">
-          <img src="img/GOPRO.jpg" alt="USA1" width="600" height="400">
+          <img src="img/GOPRO.JPG" alt="USA1" width="600" height="400">
         </a>
         <div class="desc">This is on a bus in New York on my GoPro.</div>
       </div>
@@ -57,7 +57,7 @@
 
       <div class="gallery">
         <a target="_blank" href="img/GOPRO2.JPG">
-          <img src="img/GOPRO2.jpg" alt="USA2" width="600" height="400">
+          <img src="img/GOPRO2.JPG" alt="USA2" width="600" height="400">
         </a>
         <div class="desc">Add a description of the image here</div>
       </div>
