--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a target="_blank" href="img/GOPRO2.JPG">
           <img src="img/GOPRO2.JPG" alt="USA2" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">This is a photo from New York</div>
       </div>
 
       <div class="gallery">
